buscador listo, error subtitulo

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
-html,
+html{
+  box-sizing: border-box;
+
+}
+
+*:before, *:after{
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  
 }
+
 
 a {
   text-decoration: none;
